# Action-Sudoku-Implementation

./: CMakeLists.txt  README.md  SudokuApp.cpp  SudokuApp.h  data_preprocessing_tools.ipynb  main.cpp  pch.h
SudokuLib/: AnimatedText.cpp  AnimatedText.h  Background.cpp  Background.h  CMakeLists.txt  Digit.cpp  Digit.h  DigitCheck.cpp  DigitCheck.h  DigitContainer.cpp  DigitContainer.h  DigitSpitVisitor.cpp  DigitSpitVisitor.h  EatDigitVisitor.cpp  EatDigitVisitor.h  Game.cpp  Game.h  Given.cpp  Given.h  GivenCheck.cpp  GivenCheck.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  MainFrame.cpp  MainFrame.h  SolveVisitor.cpp  SolveVisitor.h  Sparty.cpp  Sparty.h  StopWatch.cpp  StopWatch.h  SudokuView.cpp  SudokuView.h  Xray.cpp  Xray.h  ids.h  pch.h
Tests/: CMakeLists.txt  GameTests.cpp  ItemTest.cpp  StopWatchTest.cpp  gtest_main.cpp
levels/: level3.xml
